--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div>
-      <img src="/images/image-qr-code.png" alt="Imagem de QR Code" />
+      <img src="./images/image-qr-code.png" alt="Imagem de QR Code" />
       <h2>Improve your front-end skills by building projects</h2>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
